--- a/MLStudio.MetaProvider/MLStudio.MetaProvider.vcxproj
+++ b/MLStudio.MetaProvider/MLStudio.MetaProvider.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{866185DF-5C78-4228-BB64-8EBFAC864840}</ProjectGuid>
+    <ProjectGuid>{87E7235F-A4E5-48C8-8102-330D6C7CB36A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>MLStudiocore</RootNamespace>
+    <RootNamespace>MLStudioMetaProvider</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -47,11 +47,11 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -61,12 +61,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,37 +79,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BaseTypes.h" />
-    <ClInclude Include="config.h" />
-    <ClInclude Include="Endpoint.h" />
-    <ClInclude Include="ExecutionPlan.h" />
-    <ClInclude Include="Factory.h" />
-    <ClInclude Include="FileTypeEndpoint.h" />
-    <ClInclude Include="FutureManager.h" />
-    <ClInclude Include="InputEndpoint.h" />
-    <ClInclude Include="Loader.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="NodeMeta.h" />
-    <ClInclude Include="OutputEndpoint.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Endpoint.cpp" />
-    <ClCompile Include="ExecutionPlan.cpp" />
-    <ClCompile Include="Factory.cpp" />
-    <ClCompile Include="FileTypeEndpoint.cpp" />
-    <ClCompile Include="FutureManager.cpp" />
-    <ClCompile Include="InputEndpoint.cpp" />
-    <ClCompile Include="Loader.cpp" />
-    <ClCompile Include="MLStudio.core.cpp" />
-    <ClCompile Include="Node.cpp" />
-    <ClCompile Include="NodeMeta.cpp" />
-    <ClCompile Include="OutputEndpoint.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="MLStudio.MetaProvider.cpp" />
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
