--- a/MLStudio.core.Tests/MLStudio.core.Tests.vcxproj
+++ b/MLStudio.core.Tests/MLStudio.core.Tests.vcxproj
@@ -11,13 +11,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{866185DF-5C78-4228-BB64-8EBFAC864840}</ProjectGuid>
+    <ProjectGuid>{C465D738-EF36-4245-B6B5-ECC8661E26E2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>MLStudiocore</RootNamespace>
+    <RootNamespace>MLStudiocoreTests</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -47,26 +47,29 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>D:\Users\Deep\Documents\visual studio 2013\Projects\MLStudio\GtestLib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>D:\Users\Deep\Documents\visual studio 2013\Projects\MLStudio\GtestLib\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>gtest_main-mdd.lib;gtestd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,37 +82,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BaseTypes.h" />
-    <ClInclude Include="config.h" />
-    <ClInclude Include="Endpoint.h" />
-    <ClInclude Include="ExecutionPlan.h" />
-    <ClInclude Include="Factory.h" />
-    <ClInclude Include="FileTypeEndpoint.h" />
-    <ClInclude Include="FutureManager.h" />
-    <ClInclude Include="InputEndpoint.h" />
-    <ClInclude Include="Loader.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="NodeMeta.h" />
-    <ClInclude Include="OutputEndpoint.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Endpoint.cpp" />
-    <ClCompile Include="ExecutionPlan.cpp" />
-    <ClCompile Include="Factory.cpp" />
-    <ClCompile Include="FileTypeEndpoint.cpp" />
-    <ClCompile Include="FutureManager.cpp" />
-    <ClCompile Include="InputEndpoint.cpp" />
-    <ClCompile Include="Loader.cpp" />
-    <ClCompile Include="MLStudio.core.cpp" />
-    <ClCompile Include="Node.cpp" />
-    <ClCompile Include="NodeMeta.cpp" />
-    <ClCompile Include="OutputEndpoint.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="MLStudio.core.Tests.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MLStudio.core\MLStudio.core.vcxproj">
+      <Project>{866185df-5c78-4228-bb64-8ebfac864840}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
