endpoints connection correctly

--- a/MLStudio.core.Tests/MLStudio.core.Tests.vcxproj.filters
+++ b/MLStudio.core.Tests/MLStudio.core.Tests.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="MLStudio.core.Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FactoryUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
