--- a/MLStudio.core.Tests/MLStudio.core.Tests.vcxproj
+++ b/MLStudio.core.Tests/MLStudio.core.Tests.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FactoryUtil.cpp" />
     <ClCompile Include="MLStudio.core.Tests.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
